; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_lwan_get_config_path.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_lwan_get_config_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"%s.conf\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"lwan.conf\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lwan_get_config_path(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %11 = load i32, i32* @PATH_MAX, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  %15 = call i32 (...) @getpid()
  %16 = trunc i64 %12 to i32
  %17 = call i64 @proc_pidpath(i32 %15, i8* %14, i32 %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  br label %41

20:                                               ; preds = %2
  %21 = call i8* @strrchr(i8* %14, i8 signext 47)
  store i8* %21, i8** %8, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %20
  br label %41

25:                                               ; preds = %20
  %26 = load i8*, i8** %4, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 1
  %30 = call i32 @snprintf(i8* %26, i64 %27, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %29)
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %9, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %38, label %33

33:                                               ; preds = %25
  %34 = load i32, i32* %9, align 4
  %35 = load i64, i64* %5, align 8
  %36 = trunc i64 %35 to i32
  %37 = icmp sge i32 %34, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %33, %25
  br label %41

39:                                               ; preds = %33
  %40 = load i8*, i8** %4, align 8
  store i8* %40, i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %42

41:                                               ; preds = %38, %24, %19
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %42

42:                                               ; preds = %41, %39
  %43 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i8*, i8** %3, align 8
  ret i8* %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @proc_pidpath(i32, i8*, i32) #2

declare dso_local i32 @getpid(...) #2

declare dso_local i8* @strrchr(i8*, i8 signext) #2

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
